name:                hs-net-icmp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andreyk0/hs-net-icmp#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src

  exposed-modules:     Net.ICMP.V4
                     , Net.ICMP.V4.Internal

  build-depends:       base
                     , binary
                     , bytestring
                     , network
                     , random

  ghc-options:         -Wall

  default-language:    Haskell2010


executable hs-ping
  hs-source-dirs:      app

  main-is:             Main.hs

  ghc-options:         -Wall

  build-depends:       base
                     , bytestring
                     , hs-net-icmp

  default-language:    Haskell2010


test-suite test

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test

  main-is:             Test.hs

  build-depends:       base
                     , binary
                     , bytestring
                     , exceptions
                     , hs-net-icmp
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/andreyk0/hs-net-icmp
